Made more specs

--- a/specs/software_specs.tex
+++ b/specs/software_specs.tex
@@ -260,6 +260,28 @@ Next the user can then select a real world point, which is used to convey the fi
 
 \chapter{System Requirement Specifications}
 
+\newglossaryentry{SRS}{name={SRS}, description={Software/System Requirement Specifications}}
+
+
+The follow System Requirement Specifications (\glsname{SRS}) serve to outline a set of deliverables or goals for the prototyping period of analysis, design and implementation. These specifications are defined here to distill down the amount of uncertainty by picking standards were applicable. The initial round of testing on the prototype will help to clarify, extend and solidify the next iteration of specifications. This document is meant to modified and iterated.  
+
+\section{User Interface} 
+
+The user interface will be designed with standard \glsname{HTML5} provided components for capturing user inputs, and providing feedback. These elements are well known and understood by a wide variety of users, reducing the steepness of the learning curve.
+
+\subsection{Interface Overview}
+
+There are no specific requirements for the user interface as of yet. However a general understanding of the screens has been captured as described in \ref{fig:is}. 
+
+    \begin{figure}[htp]
+    \centering
+    \includegraphics[scale=0.45]{images/interface_screen.png}
+    \caption{Interface Overview}
+    \label{fig:is}
+    \end{figure}
+
+The interface overview can be broken down into two sections. The canvas and the options menu. All 'work' related with either camera calibration will be visualized in the canvas section of the interface. All inputs will be captured in the dialogs section of the interface. Finally any additional outputs will be show via the dialogs sections also.
+
 \section{Calibration}
 
 \subsection{Interface}
